project(xvraamcpp)
find_package(Eigen3 REQUIRED)
find_package(assimp REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${ASSIMP_INCLUDE_DIR})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")

add_executable(parseaam parseaam.cpp aamparse.cpp)
add_executable(aam2assimp aam2assimp.cpp aamparse.cpp)
target_link_libraries(aam2assimp ${ASSIMP_LIBRARY})